examples/errors/parsing/case-no-scrutinee.cn
main : () [impure] =
  case of { x -> x }
